--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,26 +1,26 @@
 <resources>
-    <string name="action_settings">Settings</string>
-    <string name="title_activity_provision_landing">Connect to device</string>
-    <string name="no_internet_note">To make sure you are really connected to the device, please make sure you accept the system dialog informing you that network has no internet access.</string>
-    <string name="connect_to_device_action">Connect</string>
-    <string name="connected_to_device_action">Provision Network</string>
-    <string name="ssid_hint_text">Network Name</string>
-    <string name="password_hint_text">Password</string>
-    <string name="provision">Provision</string>
+    <string name="action_settings">Configuración</string>
+    <string name="title_activity_provision_landing">Conectar a dispositivo</string>
+    <string name="no_internet_note">Para confirmar que estas conectado al dispositivo, por favor asegurese que su dispositivo esté conectado a internet.</string>
+    <string name="connect_to_device_action">Conectar</string>
+    <string name="connected_to_device_action">Disponibilidad de red</string>
+    <string name="ssid_hint_text">Nombre de la red</string>
+    <string name="password_hint_text">Contraseña</string>
+    <string name="provision">Disponibilidad</string>
 
-    <string name="success_text">Device has been successfully provisioned!</string>
-    <string name="add_device_success_text">Device has been successfully added!</string>
-    <string name="wifi_disconnected_text">Please check the device indicators for provisioning status.</string>
-    <string name="done">Done</string>
+    <string name="success_text">¡El dispositivo se ha conectado correctamente!</string>
+    <string name="add_device_success_text">¡El dispositivo se ha agregado correctamente!</string>
+    <string name="wifi_disconnected_text">Por favor verifique la disponibilidad de red.</string>
+    <string name="done">Listo</string>
 
-    <string name="enable_bluetooth_action">Enable</string>
-    <string name="enabled_bluetooth_action">Provision Network</string>
+    <string name="enable_bluetooth_action">Habilitar</string>
+    <string name="enabled_bluetooth_action">Red disponible</string>
 
     <!-- Strings used for Progress -->
-    <string name="progress_scanning">Scanning Devices...</string>
-    <string name="progress_get_status">Getting Status</string>
-    <string name="progress_loading">Loading...</string>
-    <string name="progress_claiming">Claiming in progress...</string>
+    <string name="progress_scanning">Buscando dispositivos...</string>
+    <string name="progress_get_status">Obteniendo estado</string>
+    <string name="progress_loading">Cargando...</string>
+    <string name="progress_claiming">Reclamo en progreso...</string>
     <string name="progress_add_sch">Adding Schedule...</string>
     <string name="progress_update_sch">Updating Schedule...</string>
     <string name="progress_create_group">Creating group...</string>
