--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,133 +21,133 @@
     <string name="progress_get_status">Obteniendo estado</string>
     <string name="progress_loading">Cargando...</string>
     <string name="progress_claiming">Reclamo en progreso...</string>
-    <string name="progress_add_sch">Adding Schedule...</string>
-    <string name="progress_update_sch">Updating Schedule...</string>
-    <string name="progress_create_group">Creating group...</string>
-    <string name="progress_update_group">Updating group...</string>
-    <string name="progress_remove_group">Removing group...</string>
-    <string name="progress_remove_device">Removing device...</string>
-    <string name="progress_remove_node">Removing Node...</string>
-    <string name="progress_accepting">Accepting...</string>
-    <string name="progress_declining">Declining...</string>
-    <string name="progress_wifi_scan">Scanning for Wi-Fi...</string>
+    <string name="progress_add_sch">Añadiendo calendario...</string>
+    <string name="progress_update_sch">Actualizando calendario...</string>
+    <string name="progress_create_group">Creando grupo...</string>
+    <string name="progress_update_group">Actualizando grupo...</string>
+    <string name="progress_remove_group">Removiendo grupo...</string>
+    <string name="progress_remove_device">Removiendo dispositivo...</string>
+    <string name="progress_remove_node">Removiendo nodo...</string>
+    <string name="progress_accepting">Aceptando...</string>
+    <string name="progress_declining">Rechazando...</string>
+    <string name="progress_wifi_scan">Buscando conexión Wi-Fi...</string>
 
     <!--Error Messages-->
     <string name="error_title">Error!</string>
-    <string name="error_ble_not_supported">Sorry! BLE is not supported.</string>
-    <string name="error_bluetooth_not_supported">Sorry! Bluetooth is not supported.</string>
-    <string name="error_device_not_supported">Communication failed. Device may not be supported.</string>
-    <string name="error_pop_incorrect">Error establishing session.\n Check if Proof of Possession(POP) is correct!</string>
-    <string name="error_qr_code_not_valid">Error! QR code is not valid. Please try again.</string>
-    <string name="error_device_connect_failed">Error! Failed to connect with device.</string>
-    <string name="error_device_communication_failed">Error! Unable to communicate with device.</string>
-    <string name="error_ble_device_disconnected">Bluetooth device disconnected.</string>
-    <string name="error_no_ble_device">No Bluetooth devices found!</string>
-    <string name="error_ble_device_config_failed">Bluetooth device could not be configured. Please try another device.</string>
-    <string name="error_device_list_not_received">Error : Device list not received</string>
-    <string name="error_schedule_not_received">Error : Schedules not received</string>
-    <string name="error_email_empty">Email cannot be empty</string>
-    <string name="error_invalid_email">Please enter valid email</string>
-    <string name="error_password_empty">Password cannot be empty</string>
-    <string name="error_confirm_password_empty">Confirm Password cannot be empty</string>
-    <string name="error_confirmation_code_empty">Confirmation code cannot be empty</string>
-    <string name="error_verification_code_empty">Verification code cannot be empty</string>
-    <string name="error_ssid_empty">Network name cannot be empty</string>
-    <string name="error_network_select">No network selected</string>
-    <string name="error_password_not_matched">Passwords not matched</string>
-    <string name="error_agree_terms_n_condition">Please agree to privacy policy and terms of Use.</string>
-    <string name="error_provisioning">Reset your board to factory defaults and retry</string>
-    <string name="error_authentication_failed">Wi-Fi Authentication failed.</string>
-    <string name="error_network_not_found">Network not found.</string>
-    <string name="error_unknown">Unknown Error.</string>
-    <string name="error_device_name_empty">Device name cannot be empty</string>
-    <string name="error_delete_node">Failed to delete this node.</string>
-    <string name="error_session">Cannot establish session</string>
-    <string name="error_provisioning_failed">Provisioning Failed</string>
-    <string name="error_param_update">Failed to update</string>
-    <string name="error_login">Fail to login</string>
-    <string name="error_wifi_off">Please turn on Wi-Fi to connect with device.</string>
-    <string name="error_claiming_progress">Claiming failed with error : </string>
-    <string name="error_claiming">Claiming failed. Please reboot the device and restart provisioning.</string>
-    <string name="error_claiming_not_supported">Assisted Claiming not supported for SoftAP. Cannot Proceed.</string>
-    <string name="error_claiming_start">Claim start failed</string>
-    <string name="error_claiming_init">Claim init failed</string>
-    <string name="error_claiming_verify">Claim verify failed</string>
-    <string name="error_schedule_name_empty">Schedule name cannot be empty</string>
-    <string name="error_invalid_schedule_name">Please enter schedule name</string>
-    <string name="error_device_type_not_supported">Device may not be supported.</string>
-    <string name="error_schedule_action">Please select action for schedule</string>
-    <string name="error_schedule_add">Failed to add schedule for few devices</string>
-    <string name="error_schedule_remove">Failed to remove schedule for device</string>
-    <string name="error_group_device_remove">Failed to remove device from group</string>
-    <string name="error_group_name_empty">Group name cannot be empty</string>
-    <string name="error_group_name_update">Failed to update group name</string>
-    <string name="error_group_create">Failed to create group</string>
-    <string name="error_group_update">Failed to update group</string>
-    <string name="error_group_remove">Failed to remove group</string>
-    <string name="error_get_sharing_request">Failed to get sharing requests</string>
-    <string name="error_add_member">Failed to add a member</string>
-    <string name="error_remove_member">Failed to delete member</string>
-    <string name="error_remove_sharing_req">Failed to remove sharing request</string>
-    <string name="error_update_timezone">Failed to update timezone</string>
-    <string name="error_camera_permission">Camera permission is not given. App will not be able to scan QR code to add device.</string>
-    <string name="error_location_permission">Location permission is not given. It will be require to add BLE or SoftAP devices.</string>
+    <string name="error_ble_not_supported">¡Lo sentimos! no se soporta BLE.</string>
+    <string name="error_bluetooth_not_supported">¡Lo sentimos! Bluetooth no se soporta.</string>
+    <string name="error_device_not_supported">Comunicacion fallida. Dispositivo no soportado.</string>
+    <string name="error_pop_incorrect">Error estableciendo la conexion.\n Chequee si el POP es correcto!</string>
+    <string name="error_qr_code_not_valid">Error! codigo QR no valido. Intentelo nuevamente.</string>
+    <string name="error_device_connect_failed">Error! Fallo de conexion al dispositivo.</string>
+    <string name="error_device_communication_failed">Error! Comunicacion no disponible con el dispositivo.</string>
+    <string name="error_ble_device_disconnected">Dispositivo Bluetooth desconectado.</string>
+    <string name="error_no_ble_device">No se encontraron dispositivos Bluetooth!</string>
+    <string name="error_ble_device_config_failed">El dispositivo Bluetooth no se pudo configurar. Por favor intente con otro.</string>
+    <string name="error_device_list_not_received">Error : Lista de dispositivos no recibida</string>
+    <string name="error_schedule_not_received">Error : Calendarios no recibidos</string>
+    <string name="error_email_empty">Email no puede estar vacio</string>
+    <string name="error_invalid_email">Por favor ingrese un Email valido</string>
+    <string name="error_password_empty">Contraseña no puede estar vacia</string>
+    <string name="error_confirm_password_empty">Confirmacion de contraseña no puede estar vacia</string>
+    <string name="error_confirmation_code_empty">Código de confirmacion no puede estar vacio</string>
+    <string name="error_verification_code_empty">Código de verificacion no puede estar vacio</string>
+    <string name="error_ssid_empty">Nombre de la red no puede estar vacio</string>
+    <string name="error_network_select">No se seleccionó una red</string>
+    <string name="error_password_not_matched">No coinciden las contraseñas</string>
+    <string name="error_agree_terms_n_condition">Por favor acepte los terminos de uso.</string>
+    <string name="error_provisioning">Resetee la placa a los valores de fabrica e intentelo nuevamente</string>
+    <string name="error_authentication_failed">Falló la autenticacion Wi-Fi.</string>
+    <string name="error_network_not_found">Red no encontrada.</string>
+    <string name="error_unknown">Error desconocido.</string>
+    <string name="error_device_name_empty">Nombre del dispositivo no puede estar vacio</string>
+    <string name="error_delete_node">Error al eliminar el nodo.</string>
+    <string name="error_session">No se pudo establecer la conexion</string>
+    <string name="error_provisioning_failed">El aprovisionamiento falló</string>
+    <string name="error_param_update">Error al actualizar</string>
+    <string name="error_login">Error iniciando sesión</string>
+    <string name="error_wifi_off">Encienda el Wi-Fi para conectar con el dispositivo.</string>
+    <string name="error_claiming_progress">Fallo al registrar tu cuenta con la nube: </string>
+    <string name="error_claiming">Error de registro. Por favor reinicie el dispositivo y el aprovisionamiento.</string>
+    <string name="error_claiming_not_supported">El registro asistido no es soportado por SoftAP. No se puede seguir.</string>
+    <string name="error_claiming_start">Inicio de registro fallido</string>
+    <string name="error_claiming_init">Registro init fallido</string>
+    <string name="error_claiming_verify">Verificacion de registro fallido</string>
+    <string name="error_schedule_name_empty">El nombre del calendario no puede estar vacio</string>
+    <string name="error_invalid_schedule_name">Por favor ingrese el nombre del calendario</string>
+    <string name="error_device_type_not_supported">No se puede soportar el dispositivo.</string>
+    <string name="error_schedule_action">Por favor seleccione una accion para el calendario</string>
+    <string name="error_schedule_add">Error al añadir calendario para varios dispositivos</string>
+    <string name="error_schedule_remove">Error al remover el calendario para el dispositivo</string>
+    <string name="error_group_device_remove">Error al remover el dispositivo del grupo</string>
+    <string name="error_group_name_empty">El nombre del grupo no puede estar vacio</string>
+    <string name="error_group_name_update">Error al cambiar el nombre del grupo</string>
+    <string name="error_group_create">Error al crear el grupo</string>
+    <string name="error_group_update">Error al actualizar el grupo</string>
+    <string name="error_group_remove">Error al eliminar grupo</string>
+    <string name="error_get_sharing_request">Error al obtener la solicitud de intercambio</string>
+    <string name="error_add_member">Error al añadir miembro</string>
+    <string name="error_remove_member">Error al eliminar miembro</string>
+    <string name="error_remove_sharing_req">Error al eliminar la solicitud de intercambio</string>
+    <string name="error_update_timezone">Error al actualizar la zona horaria</string>
+    <string name="error_camera_permission">No se permitio el acceso a la camara. La aplicacion no podra añadir dispositivo escaneando QR.</string>
+    <string name="error_location_permission">No se permitio el acceso a la ubicación . Sera necesario para añadir dispositivos BLE o SoftAP.</string>
 
     <!--Screen titles-->
-    <string name="title_activity_settings">Settings</string>
-    <string name="title_activity_esp_device">Device</string>
+    <string name="title_activity_settings">Configuracion</string>
+    <string name="title_activity_esp_device">Dispositivo</string>
 
-    <string name="prefix">Prefix :</string>
-    <string name="hint_prefix">Enter Prefix</string>
-    <string name="hint_key">Enter PIN</string>
-    <string name="devices_title">Devices</string>
-    <string name="enter_device_key">Enter Your Proof Of Possession PIN</string>
+    <string name="prefix">Prefijos :</string>
+    <string name="hint_prefix">Ingrese prefijo</string>
+    <string name="hint_key">Ingrese PIN</string>
+    <string name="devices_title">Servicios</string>
+    <string name="enter_device_key">Ingrese su Proof Of Possession(POP) PIN</string>
 
-    <string name="join_other_network">Join Other Network</string>
-    <string name="networks">Networks</string>
-    <string name="text_on">ON</string>
-    <string name="text_off">OFF</string>
+    <string name="join_other_network">Ingrese a otra red</string>
+    <string name="networks">Redes</string>
+    <string name="text_on">Encendido</string>
+    <string name="text_off">Apagado</string>
 
-    <string name="Username">Username</string>
-    <string name="Password">Password</string>
+    <string name="Username">Usuario</string>
+    <string name="Password">Contraseña</string>
     <string name="Menu">Menu</string>
-    <string name="app_main_desc">A sample app to showcase Cognito Identity and the SDK for Android.</string>
-    <string name="powered_by_esp">Powered by ESPRESSIF</string>
-    <string name="no_devices">No devices added</string>
-    <string name="no_schedules">No Schedules added</string>
-    <string name="no_groups">No Groups created</string>
-    <string name="no_sharing_requests">No sharing requests</string>
-    <string name="add_device_txt">You can provision a device by scanning the QR code or you can do it manually my tapping on + icon on right-top of this screen.</string>
-    <string name="signup_confirm_msg">Enter verification code.</string>
-    <string name="node_offline">Node Offline</string>
-    <string name="status_offline">Offline</string>
-    <string name="offline_at">Offline at</string>
-    <string name="no_devices_with_schedule">You don\'t have any device\nthat supports this.</string>
-    <string name="local_device_text">Reachable on WLAN</string>
-    <string name="invalid">Invalid</string>
+    //////////<string name="app_main_desc">A sample app to showcase Cognito Identity and the SDK for Android.</string>
+    <string name="powered_by_esp">Esponsoreado por ESPRESSIF</string>
+    <string name="no_devices">No se agregaron dispositivos</string>
+    <string name="no_schedules">No se agregaron calendarios</string>
+    <string name="no_groups">No se crearon grupos</string>
+    <string name="no_sharing_requests">No hay solicitudes de intercambio</string>
+    <string name="add_device_txt">Podes conectar un dispositivo escaneando el codigo QR o de forma manual tocando el icono de + en la esquina superior derecha de la pantalla.</string>
+    <string name="signup_confirm_msg">Ingrese codigo de verificacion.</string>
+    <string name="node_offline">Nodo desconectado</string>
+    <string name="status_offline">Desconectado</string>
+    <string name="offline_at">Sin conexion</string>
+    <string name="no_devices_with_schedule"> Usted no tiene ningun dispositivo que soporte esta funcion.</string>
+    <string name="local_device_text">Accesible en WLAN</string>
+    <string name="invalid">Invalido</string>
 
     <!--Tab titles-->
-    <string name="tab_login">SIGN IN</string>
-    <string name="tab_sign_up">SignUp</string>
-    <string name="tab_devices">Devices</string>
-    <string name="tab_schedules">Schedules</string>
-    <string name="tab_user">User</string>
+    <string name="tab_login">Iniciar Sesion</string>
+    <string name="tab_sign_up">Registrarse</string>
+    <string name="tab_devices">Dispositivos</string>
+    <string name="tab_schedules">Calendarios</string>
+    <string name="tab_user">Usuario</string>
 
     <!--Hint texts-->
     <string name="hint_email">Email</string>
-    <string name="hint_password">Password</string>
-    <string name="hint_confirm_password">Confirm Password</string>
-    <string name="hint_old_password">Old Password</string>
-    <string name="hint_new_password">New Password</string>
-    <string name="hint_confirm_new_password">Confirm New Password</string>
-    <string name="hint_verification_code">Verification code</string>
-    <string name="hint_pop">Proof of Possession</string>
-    <string name="hint_ssid">Network Name</string>
-    <string name="hint_value">Enter Value</string>
+    <string name="hint_password">contraseña</string>
+    <string name="hint_confirm_password">Confirmar contraseña</string>
+    <string name="hint_old_password">Contraseña vieja</string>
+    <string name="hint_new_password">Contraseña nueva</string>
+    <string name="hint_confirm_new_password">Confirme la nueva contraseña</string>
+    <string name="hint_verification_code">codigo de verificacion</string>
+    <string name="hint_pop">POP</string>
+    <string name="hint_ssid">Nombre de la red</string>
+    <string name="hint_value">Ingrese valor</string>
 
     <!--Button text-->
-    <string name="btn_register">Register</string>
-    <string name="btn_registering">Registering&#8230;</string>
+    <string name="btn_register">Registrarse</string>
+    <string name="btn_registering">Registrando&#8230;</string>
     <string name="btn_login">Sign in</string>
     <string name="btn_signing_in">Signing in&#8230;</string>
     <string name="btn_confirm">Confirm</string>
