--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -148,45 +148,45 @@
     <!--Button text-->
     <string name="btn_register">Registrarse</string>
     <string name="btn_registering">Registrando&#8230;</string>
-    <string name="btn_login">Sign in</string>
-    <string name="btn_signing_in">Signing in&#8230;</string>
-    <string name="btn_confirm">Confirm</string>
-    <string name="btn_confirming">Confirming&#8230;</string>
-    <string name="btn_set_password">Set Password</string>
-    <string name="btn_setting_password">Setting password&#8230;</string>
-    <string name="btn_connect">Connect</string>
-    <string name="btn_connecting">Connecting&#8230;</string>
-    <string name="btn_reset_password">Reset Password</string>
-    <string name="btn_resetting_password">Resetting Password&#8230;</string>
-    <string name="btn_remove">Remove</string>
-    <string name="btn_removing">Removing&#8230;</string>
-    <string name="btn_github">Sign in using GitHub</string>
-    <string name="btn_google">Sign in using Google</string>
+    <string name="btn_login">Iniciar sesion</string>
+    <string name="btn_signing_in">Iniciando sesion&#8230;</string>
+    <string name="btn_confirm">Confirmar</string>
+    <string name="btn_confirming">Confirmando&#8230;</string>
+    <string name="btn_set_password">Establecer contraseña</string>
+    <string name="btn_setting_password">Estableciendo contraseña&#8230;</string>
+    <string name="btn_connect">Conectar</string>
+    <string name="btn_connecting">Conectando&#8230;</string>
+    <string name="btn_reset_password">Reestablecer contraseña</string>
+    <string name="btn_resetting_password">Reestableciendo contraseña&#8230;</string>
+    <string name="btn_remove">Remover</string>
+    <string name="btn_removing">Removiendo&#8230;</string>
+    <string name="btn_github">Iniciar sesion usando GitHub</string>
+    <string name="btn_google">Iniciar sesion usando Google</string>
     <string name="btn_ok">OK</string>
-    <string name="btn_back">Back</string>
-    <string name="btn_cancel">Cancel</string>
-    <string name="btn_join">Provision</string>
-    <string name="btn_yes">YES</string>
+    <string name="btn_back">Atras</string>
+    <string name="btn_cancel">Cancelar</string>
+    <string name="btn_join">Aprovisionamiento</string>
+    <string name="btn_yes">SI</string>
     <string name="btn_no">NO</string>
-    <string name="btn_edit">Edit</string>
-    <string name="btn_no_qr_code">I don\'t have a QR code</string>
-    <string name="btn_add_device">Add Device</string>
-    <string name="btn_add_schedule">Add Schedule</string>
-    <string name="btn_scan_again">Rescan</string>
-    <string name="btn_sign_out">Sign Out</string>
-    <string name="btn_skip">Skip</string>
-    <string name="btn_next">Next</string>
-    <string name="btn_change_prefix">Change</string>
-    <string name="btn_save">Save</string>
-    <string name="btn_update">Update</string>
-    <string name="btn_logout">Logout</string>
-    <string name="btn_done">Done</string>
-    <string name="btn_add">Add</string>
-    <string name="btn_accept">Accept</string>
-    <string name="btn_deny">Decline</string>
-    <string name="btn_get_permission">Get Permission</string>
-    <string name="btn_start">Start</string>
-    <string name="btn_info">Node Info</string>
+    <string name="btn_edit">Editar</string>
+    <string name="btn_no_qr_code">No tengo un codigo QR</string>
+    <string name="btn_add_device">Añadir Dispositivo</string>
+    <string name="btn_add_schedule">Añadir Calendario</string>
+    <string name="btn_scan_again">Volver a escanear</string>
+    <string name="btn_sign_out">Cerrar Sesion</string>
+    <string name="btn_skip">Saltar</string>
+    <string name="btn_next">Siguiente</string>
+    <string name="btn_change_prefix">Cambiar</string>
+    <string name="btn_save">Guardar</string>
+    <string name="btn_update">Actualizar</string>
+    <string name="btn_logout">Cerrar Sesion</string>
+    <string name="btn_done">Hecho</string>
+    <string name="btn_add">Añadir</string>
+    <string name="btn_accept">Aceptar</string>
+    <string name="btn_deny">Rechazar</string>
+    <string name="btn_get_permission">Conseguir permiso</string>
+    <string name="btn_start">Iniciar</string>
+    <string name="btn_info">Info de nodo</string>
 
     <!--Screen titles-->
     <string name="title_activity_devices">Devices</string>
